v 1.0.7.2 (4 mar)

Changes by klusark:

Option to not confrim when clearing all jobs (gamePage.opts.noConfirm)
Numerous UI fixes/optizisations
__
Some bizzare version of the responsive ux.


v 1.0.7.1 (27 jan)

Significanlty reduced Chronospheres price
Chronospheres will no longer affect craftable resources unless Flux Condenator is researched
Fixed Anachronomancy not working correcrly

v 1.0.7.0 (25 jan)

Tankers
Workshow tab will now include total craft ratio (why not)
Improved menus layout a bit
Craftable price resources will be now unrolled to raw components (autocraft TBD)

v 1.0.6.0 (24 jan)

Changes by Zusias:

* Pausing the game and selling a building will no longer allow you to go above maximum for a resource. 
* Catnip demand ratio is no longer bugged after the rework of diminished returns. 
And with the addition of things like renaissance, you can now go above 100% catnip reduction if diminished returns aren't used.
* You can no longer pause the game in order to craft wood above the maximum
* Outposts will now turn off at a rate of one per tick if there is not enough uranium 
___

Changes by Aikoku:

* Added days to "To cap" and "To zero" section.
__

Sacrifice all for unicorns
Collapse/expand all for trade
Net gain value in +% res tooltip
Building S.Stations will now terminate IW
Some new flavors

Carnivals
Astrophysicists
Chronospheres

*** can be ***

v 1.0.5.8 (29 dec)

A couple new village titles, kitten names and surnames
Happy new year!. 

v 1.0.5.7 (26 dec)

*** can be correctly spent on ***
Classic mode

Changes by Aedx:
___

Buffed Golden Ratio effectiventes from 1.5 to ~1.61803398875

Changes by xranti:
___

Added option for displaying resource production values as percentages (http://redd.it/2pysri)
Fixed geodesy bug when buying it after drills (http://redd.it/2puejh)
Fixed workshop automation breaking with more than 50 steamworks (http://redd.it/2prnk9)


v 1.0.5.6 (21 dec)

Performance